Add change password and reset password apis